# cppinyin

./: CMakeLists.txt  README.md
cppinyin/csrc/: CMakeLists.txt  cppinyin.cc  cppinyin_test.cc
cppinyin/python/cppinyin/resources/: change_4tones_to_number.py
